force-app/main/default/objects/Survey_Response__c/Survey_Response__c.object-meta.xml
<CustomObject>
    <label>Survey Response</label>
    <pluralLabel>Survey Responses</pluralLabel>
    <nameField>
        <label>Survey Response Number</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Survey response submissions capturing completed survey answers per visit and account (MOD-04 Outlet Visit Execution)</description>
</CustomObject>