force-app/main/default/objects/Survey_Response__c/fields/Respondent__c.field-meta.xml
<CustomField>
    <fullName>Respondent__c</fullName>
    <label>Respondent</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Survey Responses</relationshipLabel>
    <relationshipName>Survey_Responses</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>