force-app/main/default/objects/Survey_Response__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>