force-app/main/default/objects/Survey_Response__c/listViews/All_Survey_Responses.listView-meta.xml
<ListView>
    <fullName>All_Survey_Responses</fullName>
    <columns>NAME</columns>
    <columns>Survey__c</columns>
    <columns>Account__c</columns>
    <columns>Visit__c</columns>
    <columns>Respondent__c</columns>
    <columns>Response_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Survey Responses</label>
</ListView>